
2011-11-14 Franz Holzinger  <franz@ttproducts.de>
	* new feature: decide which user groups are selectable: allowedUserGroups, allowedSubgroups, deniedUserGroups and which must kept keepUnselectableUserGroups
	* fix bug: no requirement for tems_acknowledged by default

2011-10-04 Franz Holzinger  <franz@ttproducts.de>
	* new feature: add the field terms_acknowledged and a PDF file with the terms
	* fix bug: show an error text if there is not text for missing_<fieldname> found.

2011-09-08 Franz Holzinger  <franz@ttproducts.de>
	* issue #29523 (forge): improve the hook for the validation to use the error message generator

2011-09-05 Franz Holzinger  <franz@ttproducts.de>
	* fix bug with duplicate html tag ids in select box
	* fix bug with the check for required input fields: the data:<field> feature must not use an array

2011-05-30 Franz Holzinger  <franz@ttproducts.de>
	* better error messages if the file upload fails

2011-05-16 Franz Holzinger  <franz@ttproducts.de>
	* avoid unnecessary commands when ext_tables.php is included in the FE hook tt_products extendingTCA

2011-05-14 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: enableAutoLoginOnConfirmation is also supported with md5 password

2011-03-03 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: override values for group must not use array_diff if there has not been a usergroup array before

2011-03-02 Franz Holzinger  <franz@ttproducts.de>
	* fix bug: PHP Warning: trim() expects parameter 1 to be string, array given in model/class.tx_srfeuserregister_data.php line 391
	* TYPO3 coding guidelines: add "public" to the function and variable names

2011-02-28 Franz Holzinger  <franz@ttproducts.de>
	* fix bug #17622: the email name must be encoded using addcslashes and have double quotes around it

2011-02-12 Franz Holzinger  <franz@ttproducts.de>
	* replace for PHP 5.3 deprecated ereg_replace by preg_replace
	* parameter $is_dst of mktime is deprecated in PHP 5.3
