@@ -57,6 +57,7 @@ class tx_srfeuserregister_pi1_base extends tslib_pibase {
 		$this->conf = &$conf;
 		$mainObj = &t3lib_div::getUserObj('&tx_srfeuserregister_control_main');
 		$mainObj->cObj = &$this->cObj;
+
 		$content = &$mainObj->main($content, $conf, $this, 'fe_users');
 		return $content;
 	}
